added angular js and post req

--- a/Public/index.html
+++ b/Public/index.html
@@ -6,9 +6,8 @@
     <script type="text/javascript" src="client.js"></script>
     <script type="text/javascript" src="vendors/angular.min.js"></script>
   </head>
-  <body>
-    <h1>All the Happy WoodChucks</h1>
-
-    
+  <body ng-app="myApp">
+    <h1>Wow Woodchucks...</h1>
+    <main ng-view></main>
   </body>
 </html>
